some more checkstyle issues fixes